deploy: 5f0ee620615ff0ac0c91c2faabbe898f9f2c9970

--- a/_modules/index.html
+++ b/_modules/index.html
@@ -69,6 +69,11 @@
              
   <h1>All modules for which code is available</h1>
 <ul><li><a href="neuron_morphology_tools/morphopy_utils.html">neuron_morphology_tools.morphopy_utils</a></li>
+<li><a href="neuron_morphology_tools/neuron_nx_feature_processing.html">neuron_morphology_tools.neuron_nx_feature_processing</a></li>
+<li><a href="neuron_morphology_tools/neuron_nx_io.html">neuron_morphology_tools.neuron_nx_io</a></li>
+<li><a href="neuron_morphology_tools/neuron_nx_stats.html">neuron_morphology_tools.neuron_nx_stats</a></li>
+<li><a href="neuron_morphology_tools/neuron_nx_utils.html">neuron_morphology_tools.neuron_nx_utils</a></li>
+<li><a href="neuron_morphology_tools/neuron_skeleton_utils.html">neuron_morphology_tools.neuron_skeleton_utils</a></li>
 </ul>
 
            </div>
