--- a/genindex.html
+++ b/genindex.html
@@ -10,11 +10,11 @@
     <script src="_static/js/html5shiv.min.js"></script>
   <![endif]-->
   
-        <script src="_static/jquery.js"></script>
-        <script src="_static/_sphinx_javascript_frameworks_compat.js"></script>
-        <script data-url_root="./" id="documentation_options" src="_static/documentation_options.js"></script>
-        <script src="_static/doctools.js"></script>
-        <script src="_static/sphinx_highlight.js"></script>
+        <script src="_static/jquery.js?v=5d32c60e"></script>
+        <script src="_static/_sphinx_javascript_frameworks_compat.js?v=2cd50e6c"></script>
+        <script data-url_root="./" id="documentation_options" src="_static/documentation_options.js?v=b3ba4146"></script>
+        <script src="_static/doctools.js?v=888ff710"></script>
+        <script src="_static/sphinx_highlight.js?v=4825356b"></script>
     <script src="_static/js/theme.js"></script>
     <link rel="index" title="Index" href="#" />
     <link rel="search" title="Search" href="search.html" /> 
@@ -172,6 +172,8 @@
       <li><a href="neuron_morphology_tools.html#neuron_morphology_tools.neuron_nx_utils.calculate_soma_distance_to_data_objs">calculate_soma_distance_to_data_objs() (in module neuron_morphology_tools.neuron_nx_utils)</a>
 </li>
       <li><a href="neuron_morphology_tools.html#neuron_morphology_tools.neuron_skeleton_utils.cirle_intersections">cirle_intersections() (in module neuron_morphology_tools.neuron_skeleton_utils)</a>
+</li>
+      <li><a href="neuron_morphology_tools.html#neuron_morphology_tools.neuron_nx_utils.clean_G">clean_G() (in module neuron_morphology_tools.neuron_nx_utils)</a>
 </li>
       <li><a href="neuron_morphology_tools.html#neuron_morphology_tools.neuron_nx_utils.clear_nodes_auto_proof_filter_feature">clear_nodes_auto_proof_filter_feature() (in module neuron_morphology_tools.neuron_nx_utils)</a>
 </li>
