deploy: da93a1d0b2bd5f41c1ae2b0cd54170596c81f776

--- a/genindex.html
+++ b/genindex.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
-<html class="writer-html5" lang="en" >
+<html class="writer-html5" lang="en">
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Index &mdash; neuron_morphology_tools  documentation</title>
-      <link rel="stylesheet" href="_static/pygments.css" type="text/css" />
-      <link rel="stylesheet" href="_static/css/theme.css" type="text/css" />
+      <link rel="stylesheet" type="text/css" href="_static/pygments.css?v=80d5e7a1" />
+      <link rel="stylesheet" type="text/css" href="_static/css/theme.css?v=19f00094" />
+
+  
   <!--[if lt IE 9]>
     <script src="_static/js/html5shiv.min.js"></script>
   <![endif]-->
@@ -483,6 +485,8 @@
         <li><a href="neuron_morphology_tools.html#module-neuron_morphology_tools.neuron_skeleton_utils">module</a>
 </li>
       </ul></li>
+      <li><a href="neuron_morphology_tools.html#neuron_morphology_tools.neuron_nx_utils.node_compartment_color_dict">node_compartment_color_dict() (in module neuron_morphology_tools.neuron_nx_utils)</a>
+</li>
       <li><a href="neuron_morphology_tools.html#neuron_morphology_tools.neuron_nx_utils.node_endpoint">node_endpoint() (in module neuron_morphology_tools.neuron_nx_utils)</a>
 </li>
       <li><a href="neuron_morphology_tools.html#neuron_morphology_tools.neuron_nx_utils.node_map">node_map() (in module neuron_morphology_tools.neuron_nx_utils)</a>
@@ -526,6 +530,8 @@
       <li><a href="neuron_morphology_tools.html#neuron_morphology_tools.morphopy_utils.plot_ntree">plot_ntree() (in module neuron_morphology_tools.morphopy_utils)</a>
 </li>
       <li><a href="neuron_morphology_tools.html#neuron_morphology_tools.neuron_nx_utils.plot_skeleton">plot_skeleton() (in module neuron_morphology_tools.neuron_nx_utils)</a>
+</li>
+      <li><a href="neuron_morphology_tools.html#neuron_morphology_tools.neuron_nx_utils.print_compartment_colors">print_compartment_colors() (in module neuron_morphology_tools.neuron_nx_utils)</a>
 </li>
   </ul></td>
 </tr></table>
