--- a/_modules/neuron_morphology_tools/neuron_nx_utils.html
+++ b/_modules/neuron_morphology_tools/neuron_nx_utils.html
@@ -123,7 +123,8 @@
  <span class="s1">&#39;oblique&#39;</span><span class="p">:</span> <span class="s1">&#39;green&#39;</span><span class="p">,</span>
  <span class="s1">&#39;dendrite&#39;</span><span class="p">:</span> <span class="s1">&#39;lightsteelblue&#39;</span><span class="p">,</span>
  <span class="s1">&#39;apical_total&#39;</span><span class="p">:</span> <span class="s1">&#39;magenta&#39;</span><span class="p">,</span>
- <span class="s1">&#39;soma&#39;</span><span class="p">:</span> <span class="s1">&#39;black&#39;</span><span class="p">}</span>
+ <span class="s1">&#39;soma&#39;</span><span class="p">:</span> <span class="s1">&#39;black&#39;</span><span class="p">,</span>
+  <span class="kc">None</span><span class="p">:</span><span class="s2">&quot;blue&quot;</span><span class="p">}</span>
 
 
 <span class="c1"># --- global parameters for vector computations ---</span>
@@ -4781,7 +4782,7 @@
         <span class="n">comp_colors</span><span class="o">.</span><span class="n">update</span><span class="p">(</span><span class="n">compartment_color_dict</span><span class="p">)</span>
     
     <span class="n">color_dict</span> <span class="o">=</span> <span class="nb">dict</span><span class="p">([</span>
-        <span class="p">(</span><span class="n">n</span><span class="p">,</span><span class="n">comp_colors</span><span class="p">[</span><span class="n">G</span><span class="o">.</span><span class="n">nodes</span><span class="p">[</span><span class="n">n</span><span class="p">][</span><span class="s2">&quot;compartment&quot;</span><span class="p">]])</span>
+        <span class="p">(</span><span class="n">n</span><span class="p">,</span><span class="n">comp_colors</span><span class="o">.</span><span class="n">get</span><span class="p">(</span><span class="n">G</span><span class="o">.</span><span class="n">nodes</span><span class="p">[</span><span class="n">n</span><span class="p">][</span><span class="s2">&quot;compartment&quot;</span><span class="p">],</span><span class="n">comp_colors</span><span class="p">[</span><span class="kc">None</span><span class="p">],))</span>
          <span class="k">for</span> <span class="n">n</span> <span class="ow">in</span> <span class="n">G</span><span class="o">.</span><span class="n">nodes</span><span class="p">]</span>
     <span class="p">)</span>
     <span class="k">return</span> <span class="n">color_dict</span></div>
