--- a/genindex.html
+++ b/genindex.html
@@ -1,3 +1,5 @@
+
+
 <!DOCTYPE html>
 <html class="writer-html5" lang="en">
 <head>
@@ -5,18 +7,14 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Index &mdash; neuron_morphology_tools  documentation</title>
       <link rel="stylesheet" type="text/css" href="_static/pygments.css?v=80d5e7a1" />
-      <link rel="stylesheet" type="text/css" href="_static/css/theme.css?v=19f00094" />
+      <link rel="stylesheet" type="text/css" href="_static/css/theme.css?v=e59714d7" />
 
   
-  <!--[if lt IE 9]>
-    <script src="_static/js/html5shiv.min.js"></script>
-  <![endif]-->
-  
-        <script src="_static/jquery.js?v=5d32c60e"></script>
-        <script src="_static/_sphinx_javascript_frameworks_compat.js?v=2cd50e6c"></script>
-        <script data-url_root="./" id="documentation_options" src="_static/documentation_options.js?v=b3ba4146"></script>
-        <script src="_static/doctools.js?v=888ff710"></script>
-        <script src="_static/sphinx_highlight.js?v=4825356b"></script>
+      <script src="_static/jquery.js?v=5d32c60e"></script>
+      <script src="_static/_sphinx_javascript_frameworks_compat.js?v=2cd50e6c"></script>
+      <script data-url_root="./" id="documentation_options" src="_static/documentation_options.js?v=b3ba4146"></script>
+      <script src="_static/doctools.js?v=888ff710"></script>
+      <script src="_static/sphinx_highlight.js?v=4825356b"></script>
     <script src="_static/js/theme.js"></script>
     <link rel="index" title="Index" href="#" />
     <link rel="search" title="Search" href="search.html" /> 
@@ -565,8 +563,12 @@
 </li>
       <li><a href="neuron_morphology_tools.html#neuron_morphology_tools.neuron_nx_utils.shuffle_upstream_dist_on_data_attribute">shuffle_upstream_dist_on_data_attribute() (in module neuron_morphology_tools.neuron_nx_utils)</a>
 </li>
-      <li><a href="neuron_morphology_tools.html#neuron_morphology_tools.neuron_skeleton_utils.skeletal_length">skeletal_length() (in module neuron_morphology_tools.neuron_skeleton_utils)</a>
+      <li><a href="neuron_morphology_tools.html#neuron_morphology_tools.neuron_nx_utils.skeletal_length">skeletal_length() (in module neuron_morphology_tools.neuron_nx_utils)</a>
+
+      <ul>
+        <li><a href="neuron_morphology_tools.html#neuron_morphology_tools.neuron_skeleton_utils.skeletal_length">(in module neuron_morphology_tools.neuron_skeleton_utils)</a>
 </li>
+      </ul></li>
       <li><a href="neuron_morphology_tools.html#neuron_morphology_tools.neuron_nx_stats.skeletal_length_downstream">skeletal_length_downstream() (in module neuron_morphology_tools.neuron_nx_stats)</a>
 </li>
       <li><a href="neuron_morphology_tools.html#neuron_morphology_tools.neuron_nx_utils.skeletal_length_on_path">skeletal_length_on_path() (in module neuron_morphology_tools.neuron_nx_utils)</a>
@@ -632,6 +634,8 @@
       <li><a href="neuron_morphology_tools.html#neuron_morphology_tools.neuron_nx_utils.soma_only_graph">soma_only_graph() (in module neuron_morphology_tools.neuron_nx_utils)</a>
 </li>
       <li><a href="neuron_morphology_tools.html#neuron_morphology_tools.neuron_nx_utils.soma_radius">soma_radius() (in module neuron_morphology_tools.neuron_nx_utils)</a>
+</li>
+      <li><a href="neuron_morphology_tools.html#neuron_morphology_tools.neuron_nx_utils.soma_start_angle_max">soma_start_angle_max() (in module neuron_morphology_tools.neuron_nx_utils)</a>
 </li>
       <li><a href="neuron_morphology_tools.html#neuron_morphology_tools.neuron_nx_utils.soma_vector_from_node">soma_vector_from_node() (in module neuron_morphology_tools.neuron_nx_utils)</a>
 </li>
